examples/failing/Arrays.ps
test = \arr -> arr ! 0 ! 0
